--- a/NFSeAPIClientDelphi10_1.dproj
+++ b/NFSeAPIClientDelphi10_1.dproj
@@ -109,6 +109,8 @@
         <DCCReference Include="NFSeAPI.pas">
             <ModuleName>NFeAPI</ModuleName>
         </DCCReference>
+        <DCCReference Include="Layouts\ABRASF\EnvioNFSe.pas"/>
+        <DCCReference Include="Layouts\StatusProcessamentoReq.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
